--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "memorystore": "^1.6.7",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.5.4"
   }
 }
