--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "kthbasket",
   "version": "0.0.0",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "start": "node app.js",
+    "nodemon" : "npx nodemone app.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
+    "cookie-store": "^3.0.0",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -17,6 +21,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "node-notifier": "^10.0.1",
     "nodemon": "^2.0.20",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.4"
